recursion.lessons.recursion.koch.HexaKoch.scala.error
HexaKoch:8: error: too many arguments for method hexaKoch: (levels: Int, length: Double)Unit
	else {hexaKoch(levels-1,length * 0,14)
                      ^